fix the scrollbar

--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,21 @@
 @tailwind utilities;
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background: #0a192f;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #495670;
+    border: 3px solid #0a192f;
+    border-radius: 10px;
 }
 
 .hamburger-active div:nth-child(1) {
